# serverless-svelte-rocket

./: .gitignore
backend/: Cargo.toml  docker-compose.yml
backend/src/: lib.rs
frontend/: package.json  rollup.config.js
frontend/src/pages/main/: App.svelte
