[package]
name = "backend_server"
version = "1.0.0"
authors = ["carsten"]
edition = "2018"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.2", default-features = false }
rocket_lamb = "0.6.0"